# damnsimpel-passwordgenerator-be

./: Cargo.toml
src/: main.rs  routes.rs
src/middlewares/: authenticator.rs  mod.rs  response.rs
src/models/: account.rs  hello.rs  mod.rs  passgen.rs
src/utils/: error.rs  mod.rs  palsu.rs
src/web/: mod.rs
src/web/auth/: handler.rs  route.rs
src/web/hello/: handler.rs  route.rs
src/web/passgen/: handler.rs  route.rs
tests/: quick_dev.rs
