[package]
name = "be-rust-passwordgenerator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fake = { version = "4", features = ["derive"] }
rand = "0.9.0"
regex = "1.11.1"
argon2 = "0.5.3"
chrono = "0.4.40"
chrono-tz = "0.10.2"

[dev-dependencies]
anyhow = { version = "1.0.97", default-features = false }
httpc-test = "0.1.10"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "test"
path = "tests/quick_dev.rs"
